[tool.poetry]
name = "zero-dl"
version = "0.1.0"
description = ""
authors = ["yorisilo <yorisilo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = ">=1.19.2,<1.20.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.pyright]
include = ["python_sandbox"]
reportMissingImports = true
pythonVersion = "3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
